test/errors/list/extend_bad_type.np
l = [1]
l.extend(["one", "two"])
